--- a/Python/django/便利なサイト.md
+++ b/Python/django/便利なサイト.md
@@ -1,3 +1,5 @@
 # 便利なサイト
-
+●django公式
+https://docs.djangoproject.com/ja/2.1/
+●djangoのベストプラクティス
 https://akirachiku.com/post/2014-04-07-road-to-django-best-practice/
